edit header hover and positioning main

--- a/sell.html
+++ b/sell.html
@@ -32,12 +32,12 @@
     </header>
 
     <main>
-        <div id="top">
+        <div id="top-content">
             <img src="asset/images/deventure-maison-pour-vendre.jpg" alt="Photo deventure maison">
 
             <h1 class="title-txt">Vous souhaitez vendre votre bien ?</h1>
     
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         
         <section>
@@ -45,7 +45,7 @@
                 <img src="asset/images/serre-main.png" alt="Photo serrant la main">
                 <div>
                     <p class="number_point">1</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <p class="content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 </div>
                 <button type="button"><h2>Conseils</h2></button>
             </article>
@@ -54,7 +54,7 @@
                 <img src="asset/images/rappel.png" alt="Photo appel téléphonique">
                 <div>
                     <p class="number_point">2</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <p class="content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 </div>
                 <button type="button">
                     <h2>Contactez-nous</h2>
@@ -63,8 +63,8 @@
         </section>
 
         <div id="breadcrumb">
-            <a href="">Accueil</a>
-            <p>> Vendre</p>
+            <a href="index.html" class="content-text">Accueil</a>
+            <p class="content-text active">Vendre</p>
         </div>
     </main>
 
@@ -74,7 +74,7 @@
                 <img src="asset/images/logo x150.png" alt="Logo ACGDImmo">
             </a>
             <div class="social-media">
-                <p>Retrouvez-nous sur nos réseaux sociaux</p>
+                <p class="content-text">Retrouvez-nous sur nos réseaux sociaux</p>
                 <ul>
                     <li>
                         <img src="asset/images/facebook-logo.png" alt="Logo de Facebook">
@@ -92,32 +92,32 @@
             <li class="quick-links">
                 <h2 class="footer-title">Services</h2>
                 <ul>
-                    <li><a href="buy.html">Achat</a></li>
-                    <li><a href="sell.html">Vendre</a></li>
-                    <li><a href="rent.html">Louer</a></li>
+                    <li><a class="content-text" href="sell.html">Vendre</a></li>
+                    <li><a class="content-text" href="buy.html">Achat</a></li>
+                    <li><a class="content-text" href="rent.html">Louer</a></li>
                 </ul>
             </li>
             <li class="quick-links">
                 <h2 class="footer-title">Accès rapide</h2>
                 <ul>
-                    <li><a href="">Inscription Newsletter</a></li>
-                    <li><a href="">Qui sommes-nous ?</a></li>
-                    <li><a href="">Nos offres d'emploi</a></li>
-                    <li><a href="">Avis client</a></li>
-                    <li><a href="">Plan du site</a></li>
+                    <li><a class="content-text" href="">Inscription Newsletter</a></li>
+                    <li><a class="content-text" href="">Qui sommes-nous ?</a></li>
+                    <li><a class="content-text" href="">Nos offres d'emploi</a></li>
+                    <li><a class="content-text" href="">Avis client</a></li>
+                    <li><a class="content-text" href="">Plan du site</a></li>
                  </ul>
             </li>
             <li class="quick-links">
                 <h2 class="footer-title">Contact</h2>
                 <ul class="contact-links">
-                    <li><a href="">01.02.03.04.05</a></li>
-                    <li><a href="">contact@acgdimmo.fr</a></li>
-                    <li><a href="">Saint-Junien</a></li>
+                    <li><a class="content-text" href="">01.02.03.04.05</a></li>
+                    <li><a class="content-text" href="">contact@acgdimmo.fr</a></li>
+                    <li><a class="content-text" href="">Saint-Junien</a></li>
                 </ul>
             </li>
         </ul>
         <div class="copyright">
-            <p>acgdimmo ©</p>
+            <p class="content-text">acgdimmo ©</p>
         </div>
     </footer>
 </body>
