--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <div class="auth">
-            <a class="auth" href="#">Mon compte</a>
+            <li><a href="#">Mon compte</a></li>
         </div>
    </header>
 <!-- bannière avec fonction recherche -->
