--- a/to_manage.html
+++ b/to_manage.html
@@ -28,5 +28,110 @@
             <a href="">Me connecter</a>
         </div>
     </header>
+    <div class="localisation_search">
+        <!--Image Localition + Barre de recherche + bouton-->
+        <div class="icone_localisation">
+            <img src="asset/images/to_manage/icon-localisation.svg" alt="localisation_image" width="29px" height="45px">
+        </div>
+        <div class="adress">
+            <input type="search" placeholder="Exemple : 123 rue de la goutte">
+        </div>
+        <div>
+            Rechercher
+        </div>
+    </div>
+    <!-- Paragraphe présentation faire gérer-->
+    <div class="description_to_manage">
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. A tenetur quisquam voluptas qui veniam quas culpa eum quibusdam tempore quo minus nihil natus ea aut corrupti, 
+            magnam assumenda voluptatem beatae.
+            Non laborum necessitatibus libero iste magni culpa possimus id vero molestias deserunt! Beatae nulla repellendus commodi
+            accusantium dignissimos illo sapiente placeat expedita possimus quas, minima quibusdam cupiditate atque inventore. Provident.
+        </p>
+    </div>
+    <!-- Les services -->
+    <section class="section_service">
+        <!-- Service 1 -->
+        <div class="service_1">
+            <!-- Titre -->
+            <div class="title_service_1">
+                <h1>
+                    Service 1
+                </h1>
+            </div>
+            <!-- image -->
+            <div class="image_service_1">
+                <img src="asset/images/to_manage/image_to_manage1.jpg" alt="image_home1" width="610"  height="500">
+            </div>
+            <!-- Texte -->
+            <div class="paragraph_service_1">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, tempora odit! Vero nam quis repellat assumenda, voluptatem beatae fugit facilis enim libero amet molestiae eum a praesentium sed numquam delectus!
+                Quia, sit! Modi autem dolore, doloremque molestiae at repellendus impedit eaque minima quam natus consequuntur aliquid repellat reiciendis officia dicta reprehenderit voluptates est, iste nostrum illum voluptatem deleniti, incidunt sequi!
+                Laboriosam natus, quos ex nulla necessitatibus reprehenderit, quam accusamus quod sequi sint dolores veritatis placeat nobis illo adipisci! Non doloribus sunt vero vel. Quis excepturi amet fugit corrupti repellat quos.
+                Cupiditate dolorum nemo iste impedit velit deleniti veritatis, libero aperiam? A, iste tempore, quaerat vitae culpa nobis dicta tempora accusantium facere amet dolorem suscipit consectetur? Et hic architecto fugiat magni?
+                Saepe sunt officia laborum suscipit consectetur! Enim quae ab architecto earum cumque maxime, deleniti odio? Asperiores, consequatur maiores consectetur excepturi atque eligendi illum, voluptatum ut, sequi beatae repellendus id fugiat.
+            </p>
+            </div>
+        </div>
+        <!-- Service 2 -->
+        <div class="service_2">
+            <!-- Titre -->
+            <div class="title_service_2">
+                <h1>
+                    Service 2
+                </h1>
+            </div>
+            <!-- image -->
+            <div class="image_service_2">
+                <img src="asset/images/to_manage/image_to_manage2.jpg" alt="image_home2" width="610"  height="500">
+            </div>
+            <!-- Texte -->
+            <div class="paragraph_service_2">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, tempora odit! Vero nam quis repellat assumenda, voluptatem beatae fugit facilis enim libero amet molestiae eum a praesentium sed numquam delectus!
+                    Quia, sit! Modi autem dolore, doloremque molestiae at repellendus impedit eaque minima quam natus consequuntur aliquid repellat reiciendis officia dicta reprehenderit voluptates est, iste nostrum illum voluptatem deleniti, incidunt sequi!
+                    Laboriosam natus, quos ex nulla necessitatibus reprehenderit, quam accusamus quod sequi sint dolores veritatis placeat nobis illo adipisci! Non doloribus sunt vero vel. Quis excepturi amet fugit corrupti repellat quos.
+                    Cupiditate dolorum nemo iste impedit velit deleniti veritatis, libero aperiam? A, iste tempore, quaerat vitae culpa nobis dicta tempora accusantium facere amet dolorem suscipit consectetur? Et hic architecto fugiat magni?
+                    Saepe sunt officia laborum suscipit consectetur! Enim quae ab architecto earum cumque maxime, deleniti odio? Asperiores, consequatur maiores consectetur excepturi atque eligendi illum, voluptatum ut, sequi beatae repellendus id fugiat.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <!-- Stastistiques-->
+        <div class="bloc_stats">
+            <!-- Titre-->
+            <div class="title_stats">
+                <h1>
+                    Statistiques
+                </h1>
+            </div>
+            <!-- Icones statistiques-->
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <!-- Paragraphes statistiques-->
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
