--- a/rent.html
+++ b/rent.html
@@ -22,14 +22,12 @@
                 </ul>
             </nav>
     </header>
-    <div class="font-title div1">
+    <div class="font-title">
+        <div class="div1">
+            <h1>Chercher et trouver une location</h1>
+        </div>
         <div>
-            <div>
-                <img src="./asset/images/rent/picture-title.jpg" alt="">
-            </div>
-            <div>
-                <h1>Chercher et trouver une location</h1>
-            </div>
+            <img src="asset/images/rent/picture-title.jpg">
         </div>
     </div>
 </body>
