--- a/sell.html
+++ b/sell.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img id="head_logo" src="asset/images/logo x150.png" alt="Logo ACGDImmo" width="" height="80px">
+            <img id="head_logo" src="asset/images/logo x150.png" alt="Logo ACGDImmo" width="133" height="">
         </a>
         <nav>
             <ul>
@@ -70,7 +70,7 @@
     <footer>
         <div class="identity">
             <a href="index.html">
-                <img src="asset/images/logo_white_150.png" alt="Logo ACGDImmo">
+                <img src="asset/images/logo_white_150.png" alt="Logo ACGDImmo" width="200px" height="">
             </a>
             <div class="social-media">
                 <p class="content-text">Retrouvez-nous sur nos réseaux sociaux</p>
