--- a/index.html
+++ b/index.html
@@ -36,15 +36,21 @@
             <li class="menu_search_deco">Type biens...</li>
             <li class="menu_search_deco">Prix</li>
             <li class="menu_search_deco" id="menu_search_deco">Rechercher...</li>
+            <!-- menu deroulant à faire -->
         </ul>
      </div>
     </div>
 <!-- section actualités -->
-    <div class="news">
-        <div class="news_slide">
-            <p>taratata</p>
+    <section>
+        <div class="news">
+            <div class="news_slide">
+                <div class="news_1"><a class="activ_news" href="#">Lorem ipsum first</a></div>
+                <div class="news_2"><a class="activ_news" href="#">Lorem ipsum second</a></div>
+                <div class="news_3"><a class="activ_news" href="#">Lorem ipsum third</a></div>
+                <div class="news_all"><a class="activ_news_all" href="#">Toutes nos actualités</a></div> 
+            </div>
         </div> 
-    </div>
+    </section>
 <!-- derniers biens en vente -->
    <div class="sell">
         <p>test</p>
