--- a/sell.html
+++ b/sell.html
@@ -76,13 +76,13 @@
                 <p class="content-text">Retrouvez-nous sur nos réseaux sociaux</p>
                 <ul>
                     <li>
-                        <img src="asset/images/facebook-logo.png" alt="Logo de Facebook">
+                        <a><img src="asset/images/facebook-logo.png" alt="Logo de Facebook"></a>
                     </li>
                     <li>
-                        <img src="asset/images/twitter-logo.png" alt="Logo de Twitter">
+                        <a><img src="asset/images/twitter-logo.png" alt="Logo de Twitter"></a>
                     </li>
                     <li>
-                        <img src="asset/images/instagram-logo.png" alt="Logo de Instagram">
+                        <a><img src="asset/images/instagram-logo.png" alt="Logo de Instagram"></a>
                     </li>
                 </ul>
             </div>
