--- a/rent.html
+++ b/rent.html
@@ -23,12 +23,13 @@
             </nav>
     </header>
     <div class="font-title">
+        <div class="div2">
+            <img src="asset/images/rent/picture-title.jpg">
+        </div>
         <div class="div1">
             <h1>Chercher et trouver une location</h1>
         </div>
-        <div>
-            <img src="asset/images/rent/picture-title.jpg">
-        </div>
+        
     </div>
 </body>
 </html>
