position bloc bouton actu

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="news_1"><a class="activ_news" href="#">Lorem ipsum first</a></div>
                 <div class="news_2"><a class="activ_news" href="#">Lorem ipsum second</a></div>
                 <div class="news_3"><a class="activ_news" href="#">Lorem ipsum third</a></div>
-                <div class="news_all"><a class="activ_news_all" href="#">Toutes nos actualités</a></div> 
+                <div class="news_all"><a class="activ_news_all" href="#"><span>Toutes nos actualités</span></a></div> 
             </div>
         </div> 
     </section>
