Reste à travailler le footer

--- a/estimate.html
+++ b/estimate.html
@@ -63,22 +63,24 @@
       </div>
     <h5>Adresse :</h5>
     <div class="Adresse">
-        <input type="Adresse" style="width: 700px; height: 40px;">
+        <input type="Adresse" placeholder="Ex: 121 Rue des Fleurs 87000 Limoges" style="width: 700px; height: 40px;">
       </div>
     </fieldset>
 </form>
 
 <div class="info">
     <article class="container">
+        <img class="esti" src="./asset/images/estimation immobilière.jpeg">
         <h3><a href="##">En quoi consiste l'estimation immobilière ?</a></h3>
         <p>Cras orci mauris, finibus ac pellentesque 
             a, eleifend eu lectus. Vivamus felis augue, 
             volutpat eget pretium at, egestas quis odio. 
             Curabitur laoreet turpis in diam maximus 
             ornare. Donec sed auctor arcu, at porta ante.</p>
+            <button class="ensaone">En savoirs plus</button>
     </article>
     <article class="container">
-        <img src="./asset/images/comment faire estimer son bien.jpg" alt="pc">
+        <img class="onesti" src="./asset/images/comment faire estimer son bien.jpg" alt="pc">
         <h3><a href="##">Comment faire estimer sa maison ?</a></h3>
         <p>Sed dictum velit vestibulum euismod bibendum. 
             Pellentesque cursus sit amet odio ac iaculis.
@@ -86,8 +88,44 @@
             quam leo elementum purus, vel condimentum 
             ante eros egestas ipsum. Donec eu sem 
             placerat, euismod dolor et, interdum felis.</p>
+
+    <button class="ensa">En savoirs plus</button>
     </article>
 </div>
 
+
+<footer>
+
+    <div>
+
+    <nav class="service">
+        <h4>Services</h4>
+        <ul>
+            <li><a href="#">Acheter</a></li>
+            <li><a href="#">Louer</a></li>
+            <li><a href="#">Vendre</a></li>
+        </ul>
+    </nav>
+
+    <nav class="service">
+        <h4>Accès rapide</h4>
+        <ul>
+            <li><a href="#">Inscription newsletter</a></li>
+            <li><a href="#">Qui sommes nous ?</a></li>
+            <li><a href="#">Nos offres d'emploi</a></li>
+            <li><a href="#">Avis client</a></li>
+            <li><a href="#">Plan du site</a></li>
+        </ul>
+    </nav>
+
+    <nav class="service">
+        <h4>Contact</h4>
+        <ul>
+            <li>06.08.16.45.22</li>
+            <li><a href="#">contact@acgdimmo.fr</a></li>
+            <li>Saint-Junien</li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
